[tool.poetry]
name = "aula06-bootcamp"
version = "0.1.0"
description = ""
authors = ["jvitorcardoso <aspirantevitor@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flake8 = "^7.1.1"
black = "^24.10.0"
isort = "^5.13.2"
pre-commit = "^4.0.1"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
